2008-03-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Add Vasek Smidl to the list of
	contributors

	* itpp/base/operators.cpp: Fix complex constructors in
	operators.cpp to build with g++ 4.3

	It appears that g++ 4.3 is a bit more strict with respect to type
	checking when we attempt to overload the std::complex constructor for
	use with non-double types. Use of an explicit static_cast is needed to
	overcome this restriction. This patch does the needful by converting
	those constructors to use static_casts.

	Signed-off-by: Kumar Appaiah <akumar@ee.iitm.ac.in>

	* itpp/base/algebra/qr.cpp, itpp/base/algebra/qr.h,
	tests/qr_test.cpp, tests/qr_test.ref: Add qr() overloaded function
	that do not compute Q.

	For some tasks (triangularization) the Q matrix is not really needed.
	This patch implements an overloaded version of the qr() function
	that does not compute Q.

	Thanks to Vasek Smidl for submitting the patch.

2008-03-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/vec.h: Fix it_assert_debug()
	conditions in elem_mult_out() methods of the Vec and Mat classes

	The checks for equal sizes of three and more variables can not be
	written like this: "a.size == b.size == c.size". The proper form
	is: "(a.size == b.size) && (a.size == c.size)". This patch fixes
	this bug. It also removes the redundant checks for different
	dimensions of a matrix before invoking the set_size(rows, cols)
	method.

	Thanks to Martin Senst for reporting this bug.

2008-03-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, itpp/comm/ldpc.h: Simplify
	BLDPC_Parity::calculate_base_matrix() function

	The previous implementation used to create a temporary dense
	parity check matrix and then extracted Z by Z submatrices from it
	for further processing. With this patch, the temporary Z by Z
	submatrices are sparse and extracted directly from the sparse