@@ -40,6 +40,13 @@ Exponential_RNG:
  [0.74 0.94 1.51 1.55 3.50]
  [1.10 1.64 0.06 0.54 0.11]]
 
+Gamma_RNG:
+1.19
+[2.31 1.47 0.69 0.07 0.83 0.41 0.24 0.35 1.97 1.46]
+[[0.34 0.25 0.79 1.45 0.40]
+ [0.43 0.32 0.11 0.44 1.57]
+ [6.76 0.18 0.69 1.39 0.18]]
+
 Laplace_RNG:
 5.35
 [-0.79 -0.40 1.59 -0.54 -0.02 1.74 0.47 0.06 0.46 0.52]
